--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
     const listsBlockEl = document.getElementById("listsBlock");
     const animeListEl = document.getElementById("animeList");
     const mangaListEl = document.getElementById("mangaList");
-
+    const API_BASE = "http://localhost:8001";
     function setStatus(msg, isError = false) {
       statusEl.textContent = msg;
       statusEl.className = isError ? "status error" : "status muted";
@@ -62,17 +62,22 @@
     }
 
     async function apiGet(path) {
-      const res = await fetch(path);
-      const text = await res.text();
+      const url = API_BASE + path;
+      const res = await fetch(url);
 
+      const text = await res.text();
       let data;
-      try { data = JSON.parse(text); } catch { data = text; }
+      try { data = JSON.parse(text); } catch { data = null; }
 
       if (!res.ok) {
-        throw new Error((data && data.detail) ? data.detail : "Erreur API");
+        const detail = (data && data.detail) ? data.detail : text;
+        throw new Error(`HTTP ${res.status} : ${detail}`);
       }
-      return data;
+      return data ?? JSON.parse(text);
     }
+
+
+
 
     async function searchProfile() {
       const username = document.getElementById("username").value.trim();
